# server

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  run.sh  setup-server.sh
.github/workflows/: server.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
dependencies/: deploy  env  networking  setup  ssl-certificate  watcher.rs
derive/: Cargo.toml
derive/src/: lib.rs
docs/: DEPLOY.md
migrations/: 1.sql  2.sql  3.sql  4.sql
migrations/2018-04-23-012856_create_tables/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  extractor.rs  lib.rs  main.rs  mod.rs  models.rs  router.rs  schema.rs  test_helpers.rs  utils.rs
src/api/: .update.rs.swp  device_log.rs  device_panic.rs  error.rs  event.rs  mod.rs  plant.rs  update.rs  user.rs
src/controllers/: collection.rs  compiler.rs  device.rs  device_log.rs  device_panic.rs  error.rs  event.rs  firmware.rs  mod.rs  organization.rs  plant.rs  plant_type.rs  sensor.rs  sensor_prototype.rs  target.rs  target_prototype.rs  update.rs  user.rs  workspace.rs
src/db/: auth.rs  board.rs  builtin.rs  capability.rs  code_generation.rs  collection.rs  compilation.rs  compiler.rs  device.rs  device_config.rs  device_config_request.rs  device_config_type.rs  device_log.rs  device_panic.rs  event.rs  firmware.rs  mod.rs  organization.rs  plant.rs  secret.rs  sensor.rs  sensor_config.rs  sensor_config_request.rs  sensor_config_type.rs  sensor_measurement.rs  sensor_prototype.rs  target.rs  target_prototype.rs  timestamp.rs  update.rs  user.rs  workspace.rs
src/db/sensor/: config.rs  config_request.rs  config_type.rs  measurement.rs
src/db/sensor_config/: val.rs
src/db/sensor_prototype/: builtin.rs
src/forms/: event.rs  mod.rs  plant.rs  plant_type.rs  user.rs
src/lib/: auth.rs  db.rs  error.rs  http.rs  image.rs  macros.rs  mod.rs  schema.rs  template_filter.rs  utils.rs
src/middleware/: db.rs  mod.rs
src/middlewares/: body.rs  mod.rs
src/models/: event.rs  events.rs  mod.rs  plant.rs  plant_type.rs  user.rs
src/static/css/: base.css  content.css
src/templates/: base.html  create_plant_type.html  events.html  logs.html  plant.html  plant_type.html  plants.html  signin.html  signup.html  user.html
test/: main.cpp
tests/: collection.rs  compiler.rs  device.rs  device_log.rs  device_panic.rs  event.rs  organization.rs  sensor.rs  sensor_prototype.rs  target.rs  target_prototype.rs  update.rs  user.rs
tools/: .env  deploy.sh  firejail.config  generate-fake-data.py  install-dependencies.sh  monitor.sh  renew-cert.sh  run-server-with-logging.sh  run-server.sh  setup-machine.sh
