[package]
name = "server"
version = "0.1.0"
authors = ["Paulo <paulosanz@poli.ufrj.br>"]
edition = "2018"
description = "Internet of Plants - Monitor Server"

[lib]
name = "server"
path = "src/lib.rs"


[[bin]]
name = "server-bin"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
axum = { version = "0.5", features = ["headers", "multipart"] }
headers-core = "0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "process"] }
hyper = { version = "0.14", features = ["stream", "server", "http1", "tcp", "client"] }
tower-http = { version = "0.2", features = ["cors"] }
tower = "0.4"

md5 = "0.7"

derive_more = "0.99"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"] }

pretty_env_logger = "0.4"
log = "0.4"

serde = {version = "1", features = ["derive"] }
serde_json = "1"

rand = "0.8"

names = "0.11"

bcrypt = "0.8"

chrono = { version = "0.4.19", features = ["serde"] }

once_cell = "1.1"

tempfile = "3"

mime = "0.3"
