[package]
name = "server"
version = "0.1.0"
authors = ["Paulo <paulosanz@poli.ufrj.br>"]
edition = "2018"
description = "Internet of Plants - Monitor Server"

[lib]
name = "server"
path = "src/lib.rs"


[[bin]]
name = "server-bin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = "0.8"
bcrypt = "0.8"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

futures = { version = "0.3", default-features = false, features = ["std"] }
async-recursion = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "process", "parking_lot"] }
hyper = { version = "0.14", features = ["stream", "server", "http1", "tcp", "client"] }
axum = { version = "0.5", features = ["headers", "multipart"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
tower-http = { version = "0.2", features = ["cors"] }
tower = "0.4"
mime = "0.3"
headers-core = "0.2"

sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
backtrace = "0.3"

git2 = "0.16"
tempfile = "3"
md5 = "0.7"

derive_more = "0.99"
derive_get = { git = "https://github.com/paulocsanz/derive_get.git" }
derive = { path = "./derive" }

handlebars = "4"

random_color = "0.6.1"

reqwest = "0.11"
