[package]
name = "codegen"
version = "0.1.0"
authors = ["Paulo <paulosanz@poli.ufrj.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
