[package]
name = "derive"
version = "0.1.0"
authors = ["Paulo <paulosanz@poli.ufrj.br>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits", "parsing"] }
proc-macro2 = { version = "1", default-features = false }
proc-macro-error = "1.0"
